<resources>

    <string name="app_name">PassGuard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_password">Passwords</string>
    <string name="menu_credit_card">Credit Cards</string>
    <string name="menu_numbers">Private Numbers</string>
    <string name="menu_notes">Private Notes</string>

    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_or">or</string>
    <string name="login_register">Create New Account</string>
    <string name="login_error_message">Email or password is wrong!</string>
    <string name="login_error_fields_empty">Please fill in all fields!</string>

    <string name="register_register">Register</string>
    <string name="register_password_again">Password (Again)</string>
    <string name="register_error_password_dont_match">Passwords do not match!</string>
    <string name="register_error_message">Could not create account!</string>
</resources>