<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/ic_baseline_vpn_key_24"
            android:title="@string/menu_password" />
        <item
            android:id="@+id/nav_credit_cards"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/menu_credit_card" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@drawable/ic_baseline_local_phone_24"
            android:title="@string/menu_numbers" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_speaker_notes_24"
            android:title="@string/menu_notes" />
    </group>
</menu>