<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_passwords">

    <fragment
        android:id="@+id/nav_passwords"
        android:name="com.arkkod.passguard.ui.home.HomeFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_credit_cards"
        android:name="com.arkkod.passguard.ui.gallery.GalleryFragment"
        android:label="@string/menu_credit_card"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_numbers"
        android:name="com.arkkod.passguard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_numbers"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.arkkod.passguard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_slideshow" />
</navigation>